@@ -28,7 +28,7 @@ func parseBase64(k string, d map[string]interface{}) ([]byte, error) {
 	return vv, nil
 }
 
-func ParseKey(key map[string]interface{}) (interface{}, error) {
+func ParseKey(key map[string]any) (any, error) {
 	kty, ok := key["kty"].(string)
 	if !ok {
 		return nil, errors.New("kty not found")
@@ -96,17 +96,16 @@ func ParseKey(key map[string]interface{}) (interface{}, error) {
 	}
 }
 
-func getKey(header map[string]interface{}, keys []map[string]interface{}) (interface{}, error) {
-	alg, _ := header["alg"].(string)
-	kid, _ := header["kid"].(string)
-	for _, k := range keys {
-		kid2, _ := k["kid"].(string)
-		alg2, _ := k["alg"].(string)
-		if (kid == "" || kid == kid2) && alg == alg2 {
-			return ParseKey(k)
+func ParseKeys(keys []map[string]any) ([]jwt.VerificationKey, error) {
+	ks := make([]jwt.VerificationKey, len(keys))
+	for i, ky := range keys {
+		k, err := ParseKey(ky)
+		if err != nil {
+			return nil, err
 		}
+		ks[i] = k
 	}
-	return nil, errors.New("key not found")
+	return ks, nil
 }
 
 func toStringArray(a interface{}) ([]string, bool) {
@@ -128,11 +127,15 @@ func toStringArray(a interface{}) ([]string, bool) {
 
 // parseJWT tries to parse a string as a JWT.
 // It returns (nil, nil) if the string does not look like a JWT.
-func parseJWT(token string, keys []map[string]interface{}) (*JWT, error) {
+func parseJWT(token string, keys []map[string]any) (*JWT, error) {
 	t, err := jwt.Parse(
 		token,
 		func(t *jwt.Token) (interface{}, error) {
-			return getKey(t.Header, keys)
+			ks, err := ParseKeys(keys)
+			if err != nil {
+				return nil, err
+			}
+			return jwt.VerificationKeySet{Keys: ks}, nil
 		},
 		jwt.WithExpirationRequired(),
 		jwt.WithIssuedAt(),
