@@ -19,6 +19,8 @@ Galene 0.9 (unreleased)
   * Added a new command "/stopshare".
   * Added a new permission "message" and new commands "shutup" and "unshutup".
   * Fixed a bug that could allow an ordinary user to clear the chat.
+  * Changed stateless token validation to attempt all keys rather than
+    just the first matching one.
 
 14 April 2024: Galene 0.8.2
 
